--- a/docs-content/push-windows-apps.html.md.erb
+++ b/docs-content/push-windows-apps.html.md.erb
@@ -1,14 +1,14 @@
 ---
-title: Deploying .NET Apps to Windows Cells 
+title: Deploying .NET Apps to Windows Cells
 owner: Greenhouse
 ---
 
 <strong><%= modified_date %></strong>
 
-This topic describes how to push .NET apps to Windows cells. 
+This topic describes how to push .NET apps to Windows cells.
 
 ## <a id='reqs'></a> Requirements
-After operators have installed and configured the Pivotal Cloud Foundry (PCF) Runtime for Windows v1.10 tile, developers can push .NET apps to the Windows cell. For documentation on installing the PCF Runtime for Windows tile, see [here](deploy-windows.html.md.erb). Developers can push both [OWIN](http://owin.org/) and non-OWIN apps, and can push apps that are served by [Hostable Web Core](#push) or [self-hosted](#self-hosted). 
+After operators have installed and configured the Pivotal Cloud Foundry (PCF) Runtime for Windows v1.10 tile, developers can push .NET apps to the Windows cell. For documentation on installing the PCF Runtime for Windows tile, see [here](deploy-windows.html.md.erb). Developers can push both [OWIN](http://owin.org/) and non-OWIN apps, and can push apps that are served by [Hostable Web Core](#push) or [self-hosted](#self-hosted).
 
 Operators must also install the Cloud Foundry Command Line Interface (CLI) in order to perform the forthcoming cf push commands. For documentation on installing the Cloud Foundry CLI, see [Installing the cf CLI](https://docs.cloudfoundry.org/cf-cli/install-go-cli.html)
 
@@ -24,28 +24,29 @@ Perform the following steps to push a .NET app to a Windows cell:
 	</pre>
 
 1. Push your .NET app, replacing `APP-NAME` with the name of your app, choose one of the following depending on the app you're pushing:
-	* If you are pushing an application with <code>bat</code> or <code>.exe</code> files, use the following command:
-	
-	<pre class="terminal">
-	$ cf push -s windows2012R2 -b binary_buildpack 
-	</pre>	
+	* If you are pushing .NET Framework applications, use the following command:
 
-	* If you are not pushing an application with <code>bat</code> or <code>.exe</code> files, use the following command:
 	<pre class="terminal">
-	$ cf push APP-NAME -s windows2012R2 -b hwc-buildpack
+	$ cf push APP-NAME -s windows2012R2 -b hwc_buildpack
 	</pre>
 
 	Add the `-p` flag to your `cf push` command and specify the path to the directory that contains your app.<br><br>
 
 	The push command must include the following flag:
-	* `windows2012R2` to instruct PCF to run the app in the Windows cell. 
-	
+	* `windows2012R2` to instruct PCF to run the app in the Windows cell.
+
+	* If you are pushing an application with <code>bat</code> or <code>.exe</code> files, use the following command:
+
+	<pre class="terminal">
+	$ cf push -s windows2012R2 -b binary_buildpack
+	</pre>
+
 
 1. Wait for your app to stage and start. If an error occurs, see the [Troubleshoot App Errors](#troubleshoot) section.
 
 ##<a id='self-hosted'></a> Push a Self-Hosted App
 
-Developers can choose to push a self-hosted app instead of using Hostable Web Core. Self-hosted apps combine the server code with the app code. 
+Developers can choose to push a self-hosted app instead of using Hostable Web Core. Self-hosted apps combine the server code with the app code.
 
 Perform the following steps to push a self-hosted app:
 
@@ -57,7 +58,7 @@ Perform the following steps to push a self-hosted app:
 1. Push your .NET app from the app root, replacing `APP-NAME` with the name of your app and `PATH-TO-BINARY` with the path to your executable.
 
 	<pre class="terminal">
-	$ cf push APP-NAME -s windows2012R2 -b hwc-buildpack -c PATH-TO-BINARY
+	$ cf push APP-NAME -s windows2012R2 -b binary_buildpack -c PATH-TO-BINARY
 	</pre>
 
 1. Wait for your app to stage and start. If an error occurs, see the [Troubleshoot App Errors](#troubleshoot) section.
@@ -74,14 +75,14 @@ Perform the following steps to deploy a SOAP web service:
 1. Publish the service to your local file system.
 1. Push your service from the directory containing the published web service, replacing `SERVICE-NAME` with the name of your service:
 	<pre class="terminal">
-	$ cf push SERVICE-NAME -s windows2012R2 -b hwc-buildpack -u none
+	$ cf push SERVICE-NAME -s windows2012R2 -b hwc_buildpack -u none
 	</pre>
 	<br>
 	The push command must include the following flags:
-	* You specify the stack as `windows2012R2` to instruct PCF to run the app in the Windows cell. 
+	* You specify the stack as `windows2012R2` to instruct PCF to run the app in the Windows cell.
 	<br><br>
 	The push command can include the following optional flags:
-	* If you are not pushing your service from the directory containing the published web service, add the `-p` flag to your `cf push` command and specify the path to the directory that contains the published web service. 
+	* If you are not pushing your service from the directory containing the published web service, add the `-p` flag to your `cf push` command and specify the path to the directory that contains the published web service.
 	* If you do not have a route serving `/`, add the `-u none` flag to disable the health check.
 	<br><br>
 
@@ -94,7 +95,7 @@ Perform the following steps to deploy a SOAP web service:
 	urls: YOUR-WEB-SERVICE.YOUR-DOMAIN
 	last uploaded: Thu Nov 17 19:18:19 UTC 2016
 	stack: windows2012R2
-	buildpack: hwc-buildpack
+	buildpack: hwc_buildpack
 	```
 
 ###<a id='correct-wsdl'></a> Step 2: Modify the WSDL File
@@ -114,7 +115,7 @@ See the following portion of an example WSDL file:
 - </wsdl:service>
 ```
 
-The WSDL file provides the port number for the SOAP web service as 62492. This is the port that the web service listens on in the [Garden container](../concepts/container-security.html#mechanics), but external applications cannot access the service on this port. Instead, external applications must use port 80, and the [Gorouter](../concepts/architecture/router.html) will route the request to the web service in the container. 
+The WSDL file provides the port number for the SOAP web service as 62492. This is the port that the web service listens on in the [Garden container](../concepts/container-security.html#mechanics), but external applications cannot access the service on this port. Instead, external applications must use port 80, and the [Gorouter](../concepts/architecture/router.html) will route the request to the web service in the container.
 
 The URL of the web service in the WSDL file must be modified to remove `62492`. With no port number, the URL defaults to port 80. In the example above, the modified URL would be `http://webservice.example.com/WebService1.asmx`.
 
@@ -128,10 +129,10 @@ SOAP web service developers can resolve this problem in one of two ways:
 
 Developers of external applications that consume the SOAP web service can perform the following steps to use a modified version of the WSDL file:
 
-1. In a browser, navigate to the WSDL file of the web service. 
+1. In a browser, navigate to the WSDL file of the web service.
 	<br><br>
-	You can reach the WSDL of your web service by constructing the URL as follows: 
-		
+	You can reach the WSDL of your web service by constructing the URL as follows:
+
 	`YOUR-WEB-SERVICE.YOUR-DOMAIN/ASMX-FILE.asmx?wsdl`
 	<br><br>
 	See the following URL as an example:
@@ -149,4 +150,4 @@ If a .NET app fails to start, consult the following list of errors and their pos
 
 * `NoCompatibleCell`: Your PCF deployment cannot connect to your Windows cell. Operators should see the [Troubleshooting Windows Cells](windows-troubleshooting.html) topic for information about how to troubleshoot their Windows cell configuration.
 
-* `Start unsuccessful`: Your app may not contain the required DLL files and dependencies. Ensure that you are pushing from a directory containing your app dependencies, or specifying the directory with the `-p` flag. Your app also may be misconfigured. Ensure that your app directory contains either a valid `.exe` binary or a valid `Web.config` file. 
+* `Start unsuccessful`: Your app may not contain the required DLL files and dependencies. Ensure that you are pushing from a directory containing your app dependencies, or specifying the directory with the `-p` flag. Your app also may be misconfigured. Ensure that your app directory contains either a valid `.exe` binary or a valid `Web.config` file.
