Removing vcap per AWMs instructions

--- a/docs-content/windows-security.html.md.erb
+++ b/docs-content/windows-security.html.md.erb
@@ -50,11 +50,11 @@ Pivotal has collaborated with Microsoft to further harden the stemcell by implem
 	</tr>
 	<tr>
 		<td>Deny log on as a batch job</td>
-		<td>Guests, Vcap</td>
+		<td>Guests</td>
 	</tr>
 	<tr>
 		<td>Deny log on as a service</td>
-		<td>Guests, Vcap</td>
+		<td>Guests</td>
 	</tr>
 	<tr>
 		<td>Deny log on through Remote Desktop Services</td>
