update windows docs

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -7,6 +7,8 @@ owner: Diego
 
 This documentation describes how operators install and manage Windows [cells](../concepts/architecture/index.html#diego-cell) in Pivotal Cloud Foundry (PCF) with PCF Runtime for Windows, and how developers push .NET apps to Windows cells.
 
+Operators can install PCF Runtime for Windows on vSphere, Amazon Web Services (AWS), Google Cloud Platform (GCP), or Azure.
+
 ## <a id='overview'></a>Overview
 
 Operators who want to run Windows cells in PCF in order to enable developers to push .NET apps can deploy the PCF Runtime for Windows tile.
