--- a/docs-content/push-windows-apps.html.md.erb
+++ b/docs-content/push-windows-apps.html.md.erb
@@ -11,10 +11,9 @@ This topic describes how to push .NET apps to Windows cells.
 
 After operators have installed and configured the Pivotal Cloud Foundry (PCF) Runtime for Windows v1.10 tile, developers can push .NET apps to the Windows cell. For documentation on installing the PCF Runtime for Windows tile, see the [Deploying PCF Runtime for Windows](deploy-windows.html) topic. Developers can push both [OWIN](http://owin.org/) and non-OWIN apps, and can push apps that are served by [Hostable Web Core](#push) or [self-hosted](#self-hosted).
 
-Operators must also install the Cloud Foundry Command Line Interface (CLI) in order to perform the forthcoming cf push commands. For documentation on installing the Cloud Foundry CLI, see [Installing the cf CLI](https://docs.cloudfoundry.org/cf-cli/install-go-cli.html).
+Operators must also install the Cloud Foundry Command Line Interface (CLI) in order to perform the forthcoming cf push commands. For information on installing the Cloud Foundry CLI, see the [Installing the cf CLI](../cf-cli/install-go-cli.html) topic.
 
-If you have upgraded to PCF Runtime for Windows 1.10 and have apps that you want to migrate, see [Upgrading Windows Cells](http://docs.pivotal.io/pivotalcf/windows/index.html#upgrade-apps).
-
+If you have upgraded to PCF Runtime for Windows 1.10 and have apps that you want to migrate, see the [Upgrading Windows Cells](upgrade-windows.html) topic.
 
 ##<a id='push'></a> Push a .NET App
 
