make absolute link relative

--- a/docs-content/upgrade-windows.html.md.erb
+++ b/docs-content/upgrade-windows.html.md.erb
@@ -17,7 +17,7 @@ The latest versions of your existing products will appear in the Ops Manager Ins
 
 1. When the download is complete, click **Apply Changes**.
 
-1. If necessary, configure the product. For more information on configuring PCF Runtime for Windows, see the [Deploying PCF Runtime for Windows](http://docs.pivotal.io/pivotalcf/windows/deploy-windows.html) topic.
+1. If necessary, configure the product. For more information on configuring PCF Runtime for Windows, see the [Deploying PCF Runtime for Windows](./deploy-windows.html) topic.
 
 1. Locate the **Pending Changes** section on the right-hand side of the screen and click **Apply Changes**.
 
