[Adding bolding to UI element #140080773]

--- a/docs-content/upgrade-windows.html.md.erb
+++ b/docs-content/upgrade-windows.html.md.erb
@@ -11,7 +11,7 @@ This topic describes how to upgrade the PCF Runtime for Windows tile and update 
 
 The latest versions of your existing products will appear in the Ops Manager Installation Dashboard. Upgrade your product to the latest version by following these instructions.
 
-1. Navigate to the Ops Manager Installation Dashboard.
+1. Navigate to the **Ops Manager Installation Dashboard**.
 
 1. Locate and download the product version you want to upgrade to by clicking on the green download icon on the left-hand side of the screen.
 
