[Adding bolding to UI element #140080773]

--- a/docs-content/upgrade-windows.html.md.erb
+++ b/docs-content/upgrade-windows.html.md.erb
@@ -14,9 +14,9 @@ If you are currently using Windows cells deployed by the BOSH Release for Window
 
 ##<a id='upgrade-tile'></a> Upgrade PCF Runtime for Windows
 
-The latest versions of your existing products will appear in the Ops Manager Installation Dashboard. Upgrade your product to the latest version by following these instructions.
+The latest versions of your existing products will appear in the **Ops Manager Installation Dashboard**. Upgrade your product to the latest version by following these instructions.
 
-1. Navigate to the Ops Manager Installation Dashboard.
+1. Navigate to the **Ops Manager Installation Dashboard**.
 
 1. Locate and download the product version you want to upgrade to by clicking on the green download icon on the left-hand side of the screen.
 
@@ -28,7 +28,7 @@ The latest versions of your existing products will appear in the Ops Manager Ins
 
 ##<a id='upgrade-stemcell'></a> Upgrade the Windows Stemcell
 
-1. Navigate to the Ops Manager Installation Dashboard.
+1. Navigate to the **Ops Manager Installation Dashboard**.
 
 1. Build your own vSphere stemcell. For additional help, contact [Pivotal Support](https://support.pivotal.io/).
 
@@ -40,7 +40,7 @@ The latest versions of your existing products will appear in the Ops Manager Ins
 
 1. Select the previously acquired stemcell and click **Open**.
 
-1. Click **Installation Dashboard** to navigate back to the Ops Manager Installation Dashboard. 
+1. Click **Installation Dashboard** to navigate back to the **Ops Manager Installation Dashboard**. 
 
 1. Click **Apply Changes**.
 
