--- a/docs-content/upgrade-windows.html.md.erb
+++ b/docs-content/upgrade-windows.html.md.erb
@@ -9,9 +9,9 @@ This topic describes how to upgrade the PCF Runtime for Windows tile and update 
 
 ##<a id='upgrade-tile'></a> Upgrade PCF Runtime for Windows
 
-The latest versions of your existing products will appear in the Ops Manager Installation Dashboard. Upgrade your product to the latest version by following these instructions.
+The latest versions of your existing products will appear in the **Ops Manager Installation Dashboard**. Upgrade your product to the latest version by following these instructions.
 
-1. Navigate to the Ops Manager Installation Dashboard.
+1. Navigate to the **Ops Manager Installation Dashboard**.
 
 1. Locate and download the product version you want to upgrade to by clicking on the green download icon on the left-hand side of the screen.
 
@@ -23,7 +23,7 @@ The latest versions of your existing products will appear in the Ops Manager Ins
 
 ##<a id='upgrade-stemcell'></a> Upgrade the Windows Stemcell
 
-1. Navigate to the Ops Manager Installation Dashboard.
+1. Navigate to the **Ops Manager Installation Dashboard**.
 
 1. Retrieve the stemcell by following the steps below for your IaaS:
     * For vSphere, you must [build your own stemcell](https://github.com/cloudfoundry-incubator/bosh-windows-stemcell-builder/blob/master/create-manual-vsphere-stemcells.md).
@@ -37,7 +37,7 @@ The latest versions of your existing products will appear in the Ops Manager Ins
 
 1. Select the previously acquired stemcell and click **Open**.
 
-1. Click **Installation Dashboard** to navigate back to the Ops Manager Installation Dashboard.
+1. Click **Installation Dashboard** to navigate back to the **Ops Manager Installation Dashboard**.
 
 1. Click **Apply Changes**.
 
