--- a/docs-content/deploy-windows.html.md.erb
+++ b/docs-content/deploy-windows.html.md.erb
@@ -40,7 +40,7 @@ There are two settings in the Elastic Runtime tile that affect the Windows cells
 
 	<%= image_tag('pcf-windows-tile-stemcell.png') %>
 
-1. Build your own vSphere stemcell. For additional help, contact [Pivotal Support](https://support.pivotal.io/).
+1. [Build your own stemcell](https://github.com/cloudfoundry-incubator/bosh-windows-stemcell-builder/blob/master/create-manual-vsphere-stemcells.md).
     
 1. Click **Save**.
 
