--- a/docs-content/deploy-windows.html.md.erb
+++ b/docs-content/deploy-windows.html.md.erb
@@ -32,6 +32,16 @@ There are two settings in the Elastic Runtime tile that affect the Windows cells
 
     <%= image_tag('pcf-windows-tile-orange.png') %>
 
+1. Click **Assign AZs and Networks** or **Assign Networks**. The name of the section varies depending on your IaaS.
+
+1. Assign your AZs and networks and click **Save**.
+
+1. Click **Application Containers**.
+
+1. Click **Advanced Features**.
+
+1. Click **Errands**.
+
 1. Click **Resource Config** and adjust the number and VM types of your Windows cells as needed.
 
 1. Click **Save**.
