Made clear suggestion re: hwc buildpack [#146316521]

--- a/docs-content/deploy-windows.html.md.erb
+++ b/docs-content/deploy-windows.html.md.erb
@@ -40,7 +40,7 @@ There are two settings in the Elastic Runtime tile that affect the Windows cells
 
 1. Click **Advanced Features**.
 
-1. Click **Errands**. Pivotal recommends that the HWC Buildpack errand be set to **On**. This ensures that you receive the most up-to-date HWC Buildpack.
+1. Click **Errands**. Pivotal recommends that the **Install HWC Buildpack Errand** be set to **On**. This ensures that you receive the most up-to-date HWC Buildpack.
 	
 	<%= image_tag('errands-hwc.png') %>
 
