fix typo in deploy windows

--- a/docs-content/deploy-windows.html.md.erb
+++ b/docs-content/deploy-windows.html.md.erb
@@ -51,9 +51,9 @@ There are two settings in the Elastic Runtime tile that affect the Windows cells
 
 		<%= image_tag('advanced_features_fields.png') %>
 
-	1. Enter the total desired amount of Diego Cell memory value in the **Cell Memory Capacity (MB)** field. Refer to the **Windows Diego Cell** row in the **Resource Config** tab for the current Cell memory capacity settings that this field overrides.
+	1. Enter the total desired amount of Diego Cell memory capacity in the **Cell Memory Capacity (MB)** field. Refer to the **Windows Diego Cell** row in the **Resource Config** tab for the current Cell memory capacity settings that this field overrides.
 
-	1. Enter the total desired amount of Diego cell disk capacity value in the **Cell Disk Capacity (MB)** field. Refer to the **Windows Diego Cell** row in the **Resource Config** tab for the current Cell disk capacity settings that this field overrides.
+	1. Enter the total desired amount of Diego Cell disk capacity in the **Cell Disk Capacity (MB)** field. Refer to the **Windows Diego Cell** row in the **Resource Config** tab for the current Cell disk capacity settings that this field overrides.
 	1. Click **Save**.
 
 1. Click **Errands**. Pivotal recommends that the **Install HWC Buildpack Errand** be set to **On**. This ensures that you receive the most up-to-date HWC Buildpack.
