Adding previously branched files to master [#140077531]

--- a/docs-content/about-windows-stemcells.html.md.erb
+++ b/docs-content/about-windows-stemcells.html.md.erb
@@ -18,11 +18,11 @@ Deployments of Windows Server on PCF currently utilize a stemcell containing Win
 
 Below is the documentation currently available for activating light stemcells for the Runtime for Windows tile:
 
-+ [Azure Light Stemcell](../windows/azure-light-stemcell.html)
++ <a href="../windows/azure-light-stemcell.html" class="subnav"> Azure Light Stemcell Activation</a>
 
 ## <a id="stemcell-builds"></a> Stemcell Builds
 
 Below is the documentation currently available for building stemcells for the Runtime for Windows tile:
 
-+ [vSphere Stemcell Build](../windows/vsphere-stemcell-build.html)
++ <a href="../windows/vsphere-stemcell-build.html" class="subnav"> vSphere Stemcell Build</a>
 
