--- a/docs-content/azure-light-stemcell.html.md.erb
+++ b/docs-content/azure-light-stemcell.html.md.erb
@@ -18,9 +18,7 @@ This topic discusses how to activate the Azure Light Stemcell. “Light” stemc
 
 ## <a id="download"></a> Download the Azure Light Stemcell
 
-To Download the Azure Light Stemcell, select **Azure Light Stemcell for Windows2012R2** from the **Release Download Files** section of this <a href="https://network.pivotal.io/products/stemcells-windows-server">PivNet</a> page.
-
-<%= image_tag('azure-light-stemcell-overview.png') %>
+To Download the Azure Light Stemcell, select **Azure Light Stemcell for Windows2012R2** from the **Release Download Files** section of the <a href="https://network.pivotal.io/products/stemcells-windows-server">Stemcells for PCF (Windows) PivNet</a> page.
 
 ## <a id="use"></a> Use the Azure Light Stemcell
 
