Adding stemcell docs to 1.9 [#140077531]

--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -36,6 +36,8 @@ The recommended resource requirements for each Windows cell deployed by PCF Runt
 
 * <a href="windows-security.html" class="subnav">Understanding Stemcell Security</a>
 
+* <a href="about-windows-stemcells.html" class="subnav">About Windows Stemcells</a>
+
 ## <a id='install'></a>Installing PCF Runtime for Windows ##
 
 * <a href="./deploy-windows.html" class="subnav">Deploying PCF Runtime for Windows</a>
